--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,6 +2,10 @@
 {% block title %} Index {% endblock %}
 
 {% block content %}
-    <h1>User Story Management Software</h1>
-
+    <blockquote class="blockquote text-center">
+        <br>
+        <p class="mb-0">Welcome to <strong>The User Story</strong></p>
+        <footer class="blockquote-footer">Manage Your Career</footer>
+        <img class="mx-auto" src="{{ url_for('static',filename='index_bg.jpg') }}" width="75%" alt="">
+    </blockquote>
 {% endblock %}
