--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <img src="#" class="d-inline-block align-top" alt="App Logo">
-        AppName
+    <a class="navbar-brand" href=" ">
+        <img src="{{ url_for('static',filename='the_user_story_logo.png') }}" class="d-inline-block align-top" alt="App
+    Logo" width="100" height="60">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,13 +26,13 @@
             <a class="nav-item nav-link" href="{{ url_for('team.team_base') }}">Team</a>
             <a class="nav-item nav-link" href="{{ url_for('project.backlog') }}">Project</a>
             {% if current_user.is_anonymous %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth.login') }}">Log in</a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('auth.login') }}">Log in</a>
+                </li>
             {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+                </li>
             {% endif %}
             <a class="nav-item nav-link" href="{{ url_for('chatapp.room') }}">Chat room</a>
 
@@ -47,13 +47,13 @@
 
 <div role=main>
     {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
     {% endwith %}
     <!-- Page Content -->
     {% block content %}
