--- a/app/templates/project.html
+++ b/app/templates/project.html
@@ -8,31 +8,23 @@
         display:inline-block;
         margin-left: 50px;
     }
-    .dropdown-content{
-        display:none;
-        position:absolute;
-        min-width:160px;
-        background-color:#f9f9f9;
-        box-shadow:0 8px 16px 0 rgba(0,0,0,0.2);
-        padding:12px 16px;
-        z-index:1;
-    }
-    .dropdown:hover.dropdown-content{
-        display:block;
-    }
-    .box{
-        margin:5px;
-        list-style:none;
-    }
     </style>
     <div class="container-fluid">
         <div class="row">
             <div class="col-2">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a href=" 'project.create_project') }}" type="button"
-                           class="btn btn-primary btn-lg btn-block"><strong>Create a New Project</strong>
-                        </a ><br>
+                        <a href="{{ url_for('project.create_project') }}" type="button"
+                           class="button"><strong>Create a New Project</strong>
+                        </a><br>
+                    </li>
+                    <li>
+                        <form class="bar" method="post" action ="{{ url_for('project.project_search') }}">
+                                <input class="form-control" type="search"
+                                       placeholder="Enter a Project Name, Description or Communication"
+                                       aria-label="Search" name="search_term">
+                                <button class="btn btn-primary" type="submit">Search</button>
+                        </form>
                     </li>
                 </ul>
             </div>
@@ -51,20 +43,20 @@
                     </tr>
                     {% for userstory in links %}
                         <tr>
-                            <td><a href="{{ url_for('userstory.userstory_info', project_id=current_project.project_id) }}">{{ userstory.userstory_id }}</a ></td>
-                            <td><a href="{{ url_for('userstory.userstory_info', project_id=current_project.project_id) }}">{{ userstory.content }}</a ></td>
-                            <td><a href="{{ url_for('userstory.userstory_info', project_id=current_project.project_id) }}">{{ userstory.creation_date }}</a ></td>
-                            <td><a href="{{ url_for('userstory.userstory_info', project_id=current_project.project_id) }}">{{ userstory.deadline }}</a ></td>
-                            <td><a href="{{ url_for('userstory.userstory_info', project_id=current_project.project_id) }}">{{ userstory.priority_level }}</a ></td>
-                            <td><a href="{{ url_for('userstory.userstory_info', project_id=current_project.project_id) }}">{{ userstory.team_name }}</a ></td>
+                            <td><a href="#">{{ userstory.userstory_id }}</a></td>
+                            <td><a href="#">{{ userstory.content }}</a></td>
+                            <td><a href="#">{{ userstory.creation_date }}</a></td>
+                            <td><a href="#">{{ userstory.deadline }}</a></td>
+                            <td><a href="#">{{ userstory.priority_level }}</a></td>
+                            <td><a href="#">{{ userstory.team_name }}</a></td>
                         </tr>
                     {% endfor %}
                     </thead>
                 </table>
                 <a href="{{ url_for('project.edit_project', id=current_project.project_id) }}" type="button"
-                   class="btn btn-primary btn-lg btn-block"><strong>Edit Project</strong></a >
+                   class="btn btn-primary btn-lg btn-block"><strong>Edit Project</strong></a>
                 <a href="{{ url_for('project.delete_project', project=current_project.project_id) }}" type="button"
-                   class="btn btn-primary btn-lg btn-block"><strong>Delete Project</strong></a >
+                   class="btn btn-primary btn-lg btn-block"><strong>Delete Project</strong></a>
             </div>
         </div>
     </div>
