--- a/app/templates/project_search.html
+++ b/app/templates/project_search.html
@@ -46,7 +46,7 @@
             <div scope="col-8" class="dropdown">
                 {% for project in projects %}
                     <a href="{{ url_for('project.project', term=project.project_id) }}" type="button"
-                           class="box">>
+                           class="box">
                         <li>Project: </li>
                         <li>{{ project.name }}</li>
                         <li>Assigned Date: </li>
