--- a/app/templates/project.html
+++ b/app/templates/project.html
@@ -44,7 +44,7 @@
                 <div class="col-8">
                     <a href="{{ url_for('userstory.userstory_info', project_id=current_project.project_id) }}">
                         <h1>Userstory:</h1><br>
-                        <p>Current Number: {{ userstory_number }}</p>
+                        <h5>Current Number: {{ userstory_number }}</h5>
                     </a>
                 </div>
                 <a href="{{ url_for('project.edit_project', id=current_project.project_id) }}" type="button"
