--- a/app/templates/project_edition.html
+++ b/app/templates/project_edition.html
@@ -6,23 +6,7 @@
     .dropdown{
         position:relative;
         display:inline-block;
-        margin-left: 50px;
-    }
-    .dropdown-content{
-        display:none;
-        position:absolute;
-        min-width:160px;
-        background-color:#f9f9f9;
-        box-shadow:0 8px 16px 0 rgba(0,0,0,0.2);
-        padding:12px 16px;
-        z-index:1;
-    }
-    .dropdown:hover.dropdown-content{
-        display:block;
-    }
-    .box{
-        margin:5px;
-        list-style:none;
+        margin-left: 65px;
     }
     </style>
     {% from "_formhelpers.html" import render_field %}
@@ -34,6 +18,14 @@
                         <a href="{{ url_for('project.create_project') }}" type="button"
                            class="btn btn-primary btn-lg btn-block"><strong>Create a New Project</strong>
                         </a><br>
+                    </li>
+                    <li>
+                        <form class="form-inline ml-auto" method="post" action ="{{ url_for('project.project_search') }}">
+                                <input class="form-control" type="search"
+                                       placeholder="Enter Project Info Here"
+                                       aria-label="Search" name="search_term">
+                                <button class="btn btn-primary" type="submit">Search</button>
+                        </form>
                     </li>
                 </ul>
             </div>
