--- a/app/templates/backlog.html
+++ b/app/templates/backlog.html
@@ -6,19 +6,9 @@
     .dropdown{
         position:relative;
         display:inline-block;
-        margin-left: 50px;
-    }
-    .dropdown-content{
-        display:none;
-        position:absolute;
-        min-width:160px;
-        background-color:#f9f9f9;
-        box-shadow:0 8px 16px 0 rgba(0,0,0,0.2);
-        padding:12px 16px;
-        z-index:1;
-    }
-    .dropdown:hover.dropdown-content{
-        display:block;
+        margin-left: 65px;
+        color: #212529;
+        background-color: #f8f9fa;
     }
     .box{
         margin:5px;
@@ -37,7 +27,7 @@
                     <li>
                         <form class="form-inline ml-auto" method="post" action ="{{ url_for('project.project_search') }}">
                                 <input class="form-control" type="search"
-                                       placeholder="Enter a Project Name, Description or Communication"
+                                       placeholder="Enter Project Info Here"
                                        aria-label="Search" name="search_term">
                                 <button class="btn btn-primary" type="submit">Search</button>
                         </form>
@@ -47,13 +37,13 @@
             <div scope="col-8" class="dropdown">
                 {% for project in projects %}
                     <a href="{{ url_for('project.project', term=project.project_id) }}" type="button"
-                           class="box">
-                        <li>Project: </li>
-                        <li>{{ project.name }}</li>
-                        <li>Assigned Date: </li>
-                        <li>{{ project.assigned_date }}</li>
-                        <li>Due date: </li>
-                        <li>{{ project.due_date }}</li>
+                           class="box btn btn-light">
+                        <h1>Project: </h1>
+                        <h3>{{ project.name }}</h3>
+                        <h2>Assigned Date: </h2>
+                        <h3>{{ project.assigned_date }}</h3>
+                        <h2>Due date: </h2>
+                        <h3>{{ project.due_date }}</h3>
                     </a>
                 {% endfor %}
             </div>
