--- a/app/templates/project_creation.html
+++ b/app/templates/project_creation.html
@@ -9,8 +9,16 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a href="{{ url_for('project.create_project') }}" type="button"
-                           class="col"><strong>Create a New Project</strong>
+                           class="btn btn-primary btn-lg btn-block"><strong>Create a New Project</strong>
                         </a><br>
+                    </li>
+                    <li>
+                        <form class="form-inline ml-auto" method="post" action ="{{ url_for('project.project_search') }}">
+                                <input class="form-control" type="search"
+                                       placeholder="Enter Project Info Here"
+                                       aria-label="Search" name="search_term">
+                                <button class="btn btn-primary" type="submit">Search</button>
+                        </form>
                     </li>
                 </ul>
             </div>
