--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -20,7 +20,7 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                        <h1 class="h4 text-gray-900 mb-4">Welcome!</h1>
                                     </div>
                                     {% from "_formhelpers.html" import render_field %}
                                     <form class="user" method="post" novalidate>
