--- a/app/templates/project_search.html
+++ b/app/templates/project_search.html
@@ -24,11 +24,18 @@
                            class="btn btn-primary btn-lg btn-block"><strong>Create a New Project</strong>
                         </a><br>
                     <li>
-                        <form class="form-inline ml-auto" method="post" action ="{{ url_for('project.project_search') }}">
-                                <input class="form-control" type="search"
-                                       placeholder="Enter Project Info Here"
-                                       aria-label="Search" name="search_term">
-                                <button class="btn btn-primary" type="submit">Search</button>
+                        <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100"
+                              method="post" action ="{{ url_for('project.project_search') }}">
+                            <div class="input-group">
+                                <input type="text" class="form-control bg-light border-0 small"
+                                       placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
+                                       name="search_term">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary" type="submit">
+                                    <i class="fas fa-search fa-sm"></i>
+                                    </button>
+                                </div>
+                            </div>
                         </form>
                     </li>
                 </ul>
