.jpeg home button added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="{{ url_for('auth.signup') }}">User <span
+            <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
+            <a class="nav-item nav-link active" href="{{ url_for('auth.signup') }}">Sign Up <span
                     class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="{{ url_for('userstory.userstory_base') }}">User story</a>
             <a class="nav-item nav-link" href="{{ url_for('team.team_base') }}">Team</a>
