--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,6 @@
         <br>
         <p class="mb-0">Welcome to <strong>The User Story</strong></p>
         <footer class="blockquote-footer">Manage Your Career</footer>
-        <img class="mx-auto" src="{{ url_for('static',filename='index_bg.jpg') }}" width="75%" alt="">
+        <img class="mx-auto" src="{{ url_for('static',filename='index_bg.jpeg') }}" width="75%" alt="">
     </blockquote>
 {% endblock %}
