--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,5 +2,5 @@
 {% block title %}Page Not Found{% endblock %}
 {% block content %}
     <h1>Page Not Found</h1>
-    <p>What you were looking for is just not there, <a href="{{ url_for('main.index') }}">go back home</a>.</p>
+    <p>What you were looking for is just not there, <a href="{{ url_for('main.home') }}">go back home</a>.</p>
 {% endblock %}
