--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -2,5 +2,5 @@
 {% block title %}Internal server error{% endblock %}
 {% block content %}
     <h1>Internal server error</h1>
-    <p>Oops! Something went wrong on the server, <a href="{{ url_for('main.index') }}">go back home</a>.</p>
+    <p>Oops! Something went wrong on the server, <a href="{{ url_for('main.home') }}">go back home</a>.</p>
 {% endblock %}
