--- a/app/templates/backlog.html
+++ b/app/templates/backlog.html
@@ -1,20 +1,6 @@
 {% extends "base.html" %}
-{% block title %} backlog {% endblock %}
-{% block home %} (current) {% endblock %}
+{% block title %} Backlog {% endblock %}
 {% block content%}
-    <style>
-    .dropdown{
-        position:relative;
-        display:inline-block;
-        margin-left: 65px;
-        color: #212529;
-        background-color: #f8f9fa;
-    }
-    .box{
-        margin:5px;
-        list-style:none;
-    }
-    </style>
     <div class="container-fluid">
         <div class="row">
             <div class="col-2">
@@ -41,7 +27,8 @@
                     </li>
                 </ul>
             </div>
-            <div scope="col-8" class="dropdown">
+            <div scope="col-8" style="position:relative; display:inline-block; margin-left: 65px; color: #212529;
+            background-color: #ffffff;">
                 {% for project in projects %}
                     <a href="{{ url_for('project.project', term=project.project_id) }}" type="button"
                            class="box btn btn-light">
