signup/login bg image

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,7 +16,9 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                            <div class="col-lg-6 d-none d-lg-block ">
+                                <img class="mx-auto" src="{{ url_for('static',filename='login_bg_image.png') }}" width="100%" alt="">
+                            </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
