--- a/app/templates/backlog.html
+++ b/app/templates/backlog.html
@@ -31,7 +31,7 @@
             background-color: #ffffff;">
                 {% for project in projects %}
                     <a href="{{ url_for('project.project', term=project.project_id) }}" type="button"
-                           class="box btn btn-light">
+                           class="box btn btn-dark">
                         <h1>Project: </h1>
                         <h3>{{ project.name }}</h3>
                         <h2>Assigned Date: </h2>
