--- a/app/templates/team_information.html
+++ b/app/templates/team_information.html
@@ -2,44 +2,44 @@
 {% block title %} Team Info {% endblock %}
 
 {% block team_base_content %}
-            <div class="col-8">
-                <h1>Team:   <span>{{ team_details[0].team_name }}</span></h1><br>
-                <h3>Team ID: {{ team_details[0].team_id }}</h3>
-                <h3>Team Members:</h3>
-                <table class="table">
-                    <thead class="thead-dark">
+    <div class="col-8">
+        <h1>Team: <span>{{ team_details[0].team_name }}</span></h1><br>
+        <h3>User stories Working on:</h3>
+        {% if not userstories %}
+            <h3>No User Story Working on</h3>
+        {% else %}
+            <table class="table">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Userstory</th>
+                    <th scope="col">Priority</th>
+                    <th scope="col">Project</th>
+                    <th scope="col"><span class="text-nowrap">Start Date</span></th>
+                    <th scope="col">Deadline</th>
+                </tr>
+                {% for userstory in userstories %}
                     <tr>
-                        <th scope="col">User ID</th>
-                        <th scope="col">User</th>
-                        <th scope="col">Email</th>
+                        <td>{{ userstory.content }}</td>
+                        <td>{{ userstory.priority }}</td>
+                        <td>{{ userstory.project_name }}</td>
+                        <td><span class="text-nowrap">{{ userstory.creation_date }}</span></td>
+                        <td><span class="text-nowrap">{{ userstory.deadline }}</span></td>
                     </tr>
-                    {% for team_detail in team_details %}
-                        <tr>
-                            <td>{{ team_detail.user_id }}</td>
-                            <td>{{ team_detail.user_name }}</td>
-                            <td>{{ team_detail.email }}</td>
-                        </tr>
-                    {% endfor %}
-                    </thead>
-                </table>
-                {% if not userstory %}
-                    <h3>No User Story Working on</h3>
-                {% else %}
-                    {% for one_userstory in userstory %}
-                        <h3>User Story Working on:{{ one_userstory.content}}</h3>
-                        <h3>Start from: {{ one_userstory.creation_date }}</h3>
-                        <h3>Due: {{ one_userstory.deadline }}</h3>
-                        <h3>Priority: {{ one_userstory.priority }}</h3>
-                        <h3>Relevant to: {{ one_userstory.project_name }} </h3><br>
-                    {% endfor %}
-                {% endif %}
-                <a class="btn btn-primary" href="{{ url_for('team.team_edition', team_id=team_details[0].team_id)}}">Edit</a>
-                <a class="btn btn-primary" href="{{ url_for('team.delete_team', team_id=team_details[0].team_id)}}">Delete</a>
-            </div>
-            <div class="col-2">
-                <h3>Team Leader:</h3>
-                <p>{{ team_leader[0].user_name }}</p>
-                <h3>Team Members:</h3>
+                {% endfor %}
+                </thead>
+            </table>
+        {% endif %}
+        <a class="btn btn-primary" href="{{ url_for('team.team_edition', team_id=team_details[0].team_id) }}">Edit Team</a>
+        <a class="btn btn-primary" href="{{ url_for('team.delete_team', team_id=team_details[0].team_id) }}">Delete Team</a>
+    </div>
+    <div class="col-2">
+        <h3>Team Leader:</h3>
+        <p>{{ team_leader[0].user_name }}</p>
+        <h3>Team Members:</h3>
+        {% for team_detail in team_details %}
+            <p>Name: {{ team_detail.user_name }}<br>
+                Email:{{ team_detail.email }}</p>
+        {% endfor %}
 
-            </div>
+    </div>
 {% endblock %}
