--- a/app/templates/team_base.html
+++ b/app/templates/team_base.html
@@ -15,12 +15,20 @@
                             </a><br>
                         </li>
                         <li class="nav-item">
-                            <form class="form-inline ml-auto" method="post" action ="{{ url_for('team.team_base') }}">
-                                <input class="form-control" type="search" placeholder="Enter Team name" aria-label="Search" name="search_term">
-                                <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
+                            <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100"
+                                  method="post" action="{{ url_for('team.team_base') }}">
+                                <div class="input-group">
+                                    <input type="text" class="form-control bg-light border-0 small"
+                                           placeholder="Search Team" aria-label="Search"
+                                           aria-describedby="basic-addon2"
+                                           name="search_term">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-primary" type="submit">
+                                            <i class="fas fa-search fa-sm"></i>
+                                        </button>
+                                    </div>
+                                </div>
                             </form>
-                        </li>
-                        <li class="nav-item">
                             <table class="table">
                                 <thead class="thead-dark">
                                 <tr>
