--- a/app/templates/userstory_information.html
+++ b/app/templates/userstory_information.html
@@ -3,55 +3,40 @@
 
 {% block userstory_base_content %}
     <div class="col-10">
-        <h1>Project: {{ one_project[0].name }}</h1><br>
-        <h3>Project ID: {{ one_project[0].project_id }}</h3>
+        <h1>Project: {{ one_project[0].name }}</h1>
         <form class="form-inline ml-auto"
               action="{{ url_for('userstory.userstory_info',project_id=one_project[0].project_id) }}" method="post">
             <input class="form-control" type="search" placeholder="Enter userstory or priority"
                    aria-label="Search" name="search_term">
             <button class="btn btn-primary btn-outline" type="submit">Search</button>
-        </form>
-        <main>
-            <div class="container-fluid">
-                <div class="card mb-4">
-                            <div class="card-header"><i class="fas fa-table mr-1"></i>Project Information</div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Userstory</th>
-                                    <th>Team</th>
-                                    <th>Priority</th>
-                                    <th>Start Date</th>
-                                    <th>Deadline</th>
-                                    <th>Option</th>
-                                </tr>
-                                </thead>
-                                <tfoot>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Userstory</th>
-                                    <th>Team</th>
-                                    <th>Priority</th>
-                                    <th>Start Date</th>
-                                    <th>Deadline</th>
-                                    <th>Option</th>
-                                </tr>
-                                </tfoot>
-                                <tbody>
+        </form><p></p>
+        <div class="container-fluid">
+            <div class="card mb-4">
+                <div class="card-header"><i class="fas fa-table mr-1"></i>Project Information</div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <thead>
+                            <tr>
+                                <th>Userstory</th>
+                                <th>Team</th>
+                                <th>Priority</th>
+                                <th>Start Date</th>
+                                <th>Deadline</th>
+                                <th>Option</th>
+                            </tr>
+                            </thead>
+                            <tbody>
 
 
-                                {% for userstory in userstories %}
-                                    <tr>
-                                        <td>{{ userstory.userstory_id }}</td>
-                                        <td>{{ userstory.content }}</td>
-                                        <td><span class="text-nowrap">{{ userstory.team_name }}</span></td>
-                                        <td>{{ userstory.priority }}</td>
-                                        <td><span class="text-nowrap">{{ userstory.creation_date }}</span></td>
-                                        <td><span class="text-nowrap">{{ userstory.deadline }}</span></td>
-                                        <td>
+                            {% for userstory in userstories %}
+                                <tr>
+                                    <td>{{ userstory.content }}</td>
+                                    <td><span class="text-nowrap">{{ userstory.team_name }}</span></td>
+                                    <td>{{ userstory.priority }}</td>
+                                    <td><span class="text-nowrap">{{ userstory.creation_date }}</span></td>
+                                    <td><span class="text-nowrap">{{ userstory.deadline }}</span></td>
+                                    <td>
 
                         <span class="text-nowrap">
                         <a class="text-danger"
@@ -64,16 +49,15 @@
                             Edit
                         </a>
                         </span>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
     </div>
 
 {% endblock %}
