base & team base

--- a/app/templates/team_base.html
+++ b/app/templates/team_base.html
@@ -28,7 +28,7 @@
                                         </button>
                                     </div>
                                 </div>
-                            </form>
+                            </form><p></p>
                             <table class="table">
                                 <thead class="thead-dark">
                                 <tr>
