--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -1,27 +1,27 @@
 {% extends "base.html" %}
 {% block title %} Team : {{ team }} {% endblock %}
 {% block content %}
-<head>
+    <head>
 
         <title>Chat Group: {{ team }}</title>
         <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
         <script type="text/javascript" charset="utf-8">
             var socket;
-            $(document).ready(function(){
+            $(document).ready(function () {
                 socket = io.connect('http://' + document.domain + ':' + location.port + '/chat');
-                socket.on('connect', function() {
+                socket.on('connect', function () {
                     socket.emit('joined', {});
                 });
-                socket.on('status', function(data) {
+                socket.on('status', function (data) {
                     $('#chat').val($('#chat').val() + '<' + data.msg + '>\n');
                     $('#chat').scrollTop($('#chat')[0].scrollHeight);
                 });
-                socket.on('message', function(data) {
+                socket.on('message', function (data) {
                     $('#chat').val($('#chat').val() + data.msg + '\n');
                     $('#chat').scrollTop($('#chat')[0].scrollHeight);
                 });
-                $('#text').keypress(function(e) {
+                $('#text').keypress(function (e) {
                     var code = e.keyCode || e.which;
                     if (code == 13) {
                         text = $('#text').val();
@@ -30,8 +30,9 @@
                     }
                 });
             });
+
             function leave_room() {
-                socket.emit('left', {}, function() {
+                socket.emit('left', {}, function () {
                     socket.disconnect();
 
                     // go back to the login page
@@ -41,11 +42,18 @@
         </script>
     </head>
     <body>
-        <h1>Current Chat Group: {{ team }}</h1>
-        <div class="col-sm-6">
-            <textarea id="chat" cols="160" rows="20"></textarea><br><br>
-        </div>
-        <input id="text" size="80"  placeholder="Enter your message here"><br><br>
-        <a href="#" onclick="leave_room();">Leave this room</a>
+    <h1>Current Chat Group: {{ team }}</h1>
+
+    <div class="col-sm-6">
+        <textarea id="chat" cols="160" rows="20"></textarea><br><br>
+    </div>
+    <input id="text" size="80" placeholder="Enter your message here" ALIGN="center" ><br><br>
+    <a href="#" onclick="leave_room();">Leave this room</a>
     </body>
+    <script type=”text/javascript”>
+    function setbg(color)
+    {
+    document.getElementById("text").style.background=color
+    }
+    </script>
 {% endblock %}
